# git-cloner

./: Cargo.toml  LICENSE  PUBLISHING.md  README.md  install.sh
.github/workflows/: build.yml  publish-gh-pages.yml  release.yml
src/: main.rs
support/: git-cloner-completion.bash  git-cloner-completion.zsh
