[package]
name = "git-cloner"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
categories = ["command-line-utilities", "development-tools"]
authors = ["Ramon Buckland <ramon@thebuckland.com>"]
description = "Clone a git repository to WORKDIR/<site>/<org>/<repo>"
documentation = "https://github.com/rbuckland/git-cloner"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
url = "2.1"
shellexpand = "2.0"
directories = "5.0.1"
anyhow = "1.0.75"
